# Obsidian-WEB

./: .gitignore  delete_alert_tags.py  package-lock.json  package.json  quartz.config.ts  run_analysis.bat  run_analysis.ps1  tags_to_delete.txt  test_suggestions.json
backend/: debug_caca.py  debug_trace.py  debug_trace2.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/analysis/: __init__.py  batch_processor.py  context_resolver.py  contextual.py  entity_classifier.py  entity_detector.py  entity_detector_v2.py  semantic.py  similarity.py  similarity_v2.py  structural.py  vector_index.py
backend/src/clustering/: __init__.py  detector.py  detector_v2.py
backend/src/data/: __init__.py
backend/src/data/references/: art_movements.json  concepts.json  context_words.json  corrections.txt  disciplines.json  hierarchy.json  objects.json  persons.json  (+6 more)
backend/src/database/: __init__.py  models.py  repository.py
backend/src/embeddings/: __init__.py  embedder.py
backend/src/output/: __init__.py  suggestions.py
backend/src/parsers/: __init__.py  link_extractor.py  note_parser.py
backend/src/tags/: __init__.py  analyzer.py  conventions.py  domain_promotion.py  emergent_detector.py  feedback.py  generator.py  matcher.py  redundancy.py  vocabulary.py
backend/src/wikidata_extractor/: __init__.py  classifier.py  config.py  domain_vocabulary.json  extractor.py  formatter.py  main.py  places_extractor.py  sparql_client.py  test_extractor.py  vocabulary_browser.py  vocabulary_generator.py  wikipedia_extractor.py  wiktionary_extractor.py
(+978 files in other folders)
